2003-06-18  Dodji Seketeli  <dodji@seketeli.org>

	* tests/test4-main.c: updated the test routine to test
	cr_statement_at_charset_rule_parse_from_buf().
	
	* src/parser/cr-statement.[ch]: added a new
	cr_statement_at_charset_rule_parse_from_buf() method to
	to create an "@charset" statement from a buffer text content.

	* src/parser/cr-parser.c:Fixeds a small possibility of memleak
	in cr_parser_parse_charse()	
	
	* tests/test4-main.c: fixed a small typo in the "@page" rule
	embedded in gv_at_page_buf.
	
	* src/parser/cr-parser.c: fixed a small bug in the
	cr_parser_parse_page () function.

2003-06-17  Dodji Seketeli <dodji@seketeli.org>

	* tests/test4-main.c: added test_cr_statement_at_page_rule_parse ()
	to test the new cr_statement_at_page_rule_parse_from_buf() function.
	
	* src/parser/cr-statement.[ch]:
	added a first version of cr_statement_at_page_rule_parse_from_buf().
	This doesn't work. I need to debug it first.
	
	* tests/test4-main.c: updated this to test
	cr_statement_at_media_rule_parse_from_buf().
	
	* src/parser/cr-statement.[ch]:
	debuged cr_statement_at_media_rule_parse_from_buf() and the functions
	it relies on.
	cr_statement_new_ruleset()=> fixed this so that it properly
	handles the containing  "@media" rule.
	cr_statement_new_at_media_rule =>fixed this so that it properly
	handles the contained rulesets.
	
	* src/parser/cr-statement.[hc]:
	coded  a first version of cr_statement_at_media_rule_parse_from_buf().
	This took the writing of a couple a SAC callback. Pfffew, SAC is a rather
	tedious api. cr_statement_at_media_rule_parse_from_buf() does not
	work yet, I still have to debug it.

	* src/parser/cr-parser.c: use the new cr_tknzr_peek_byte2 () function
	in the cr_parser_parse_import() method. This is a cleaner, smaller and
	faster than the older approach.

	* src/parser/cr-om-parser.c: use the
	cr_dup_glist_of_string () helper fonction in the
	start media callback.
	
	* src/parser/cr-utils.[ch]: fixed some 'const' omissions here also.
	